--- a/pipe.Rmd
+++ b/pipe.Rmd
@@ -1,28 +1,22 @@
 ---
-title: The pipe, dplyr, tibbles, tidyverse
 header-includes: \usepackage{color}
+                 \usepackage{float}
 output:
   html_document: default
   pdf_document:
     fig_caption: no
 ---
-<style>
-table, th, td { text-align:right; }
-th, td {padding: 10px;}
-</style>
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
-library(knitr)
-library(wolfr)
-opts_chunk$set(fig.width=6, fig.align = "center", 
-      out.width = "70%", warning=FALSE, message=FALSE)
-library(ggplot2)
-library(grid)
+source("../R/setup.rmd.R", local=TRUE)
+setup.rmd(local.env=environment())
 ```
 `r hl()$basefontsize()`
+`r hl()$style()`
 
+## The pipe, dplyr, tibbles, tidyverse
+
+### The pipe
 
 The traditional workflow of R comes in large part from other computer languages. So a typical sequence would be like this:
 
@@ -33,7 +27,7 @@ ggplot(data=df1, aes(disp, mpg)) +
   geom_point()
 ```
 
-This is not how we think, though. That would go somehing like this:
+This is not how we think, though. That would go something like this:
 
 -  take the mtcars data set  
 -  then pick only cars with hp over 70  
@@ -53,7 +47,7 @@ invented by Stefan Milton. The basic operator is %>%. The same as above can be d
 
 ```{r}
 mtcars %>%
-  subset(x=., hp>70) %>%
+  subset(x=., hp>70) %>% #R knows what hp is!
   ggplot(data=., aes(disp, mpg)) + 
      geom_point()
 ```
@@ -62,13 +56,32 @@ In principle the pipe can always be used in this way:
 
 ```{r}
 x <- rnorm(10)
-round(mean(x), 3)
+mean(x)
 x %>% 
-  mean() %>% 
-  round(digits = 3)
+  mean()
 ```
 
 Notice that here we called both mean and round without a needed argument. In principle the pipe will always use the data on the left of %>% as the first argument of the command on the right.
+
+**Exercise**
+
+Consider the following operation:
+
+```{r}
+x <- c(0.109, 0.359, 0.63, 0.996, 0.515, 0.142, 0.017, 0.829, 0.907)
+round(exp(diff(log(x))), 1)
+```
+
+write the same using the pipe
+
+```{r echo=FALSE, eval=FALSE}
+x %>% log() %>%
+    diff() %>%
+    exp() %>%
+    round(1)
+```
+
+`r hl()$hr()`
 
 At first it may not seem like writing x %>% f() is any easier than writing f(x), but this style of coding becomes very useful when applying multiple functions; in this case piping will allow one to think from left to right in the logical order of functions rather than from inside to outside in an ugly large nested statement of functions.
 
@@ -80,7 +93,7 @@ The pipe is only a few years old, but there are already many packages that take 
 library(dplyr)
 ```
 
-written by Hadley Wickham. In essence it is a replacement for the *apply* famility of R routines. We can also write the above with
+written by Hadley Wickham. In essence it is a replacement for the *apply* family of R routines. We can also write the above with
 
 ```{r}
 mtcars %>%
@@ -91,16 +104,16 @@ mtcars %>%
 
 Notice how *filter* is aware of the pipe, it doesn't need to be told that it is supposed to work with mtcars. So far, *ggplot* is not fully pipe aware (otherwise we could have written %>% geom_point()), but this will change in the near future.
 
-## tibbles
+### tibbles
 
-dataframes have been the main data format of R since its beginnings, and are likely to stay that way for a long time. They do, however have some shortcomings. Among other things, when you type the name of a dataframe and hit enter, all of it is shown, even if the data set is huge. On the other hand, interesting information such as the data types of the columns is not shown. To eliviate these (and some other) issues the data format *tibble* was invented. We can turn a dataframe into a tibble with
+dataframes have been the main data format of R since its beginnings, and are likely to stay that way for a long time. They do, however have some shortcomings. Among other things, when you type the name of a dataframe and hit enter, all of it is shown, even if the data set is huge. On the other hand, interesting information such as the data types of the columns is not shown. To help with these (and some other) issues the data format *tibble* was invented. We can turn a dataframe into a tibble with
 
 ```{r}
 tmtcars <- as.tbl(mtcars)
 tmtcars
 ```
 
-so we have all relevant information about the data set: its size (32x11), the variables and their formats, and the begining of the data set.
+so we have all relevant information about the data set: its size (32x11), the variables and their formats, and the beginning of the data set.
 
 *tibbles* are also designed to work well with piping and with the package *dplyr*.
 
@@ -112,7 +125,7 @@ tibble(x=1:5, y=x^2)
 
 Also, tibbles never use row.names, and it only recycles vectors of length 1. This is because recycling vectors of greater lengths is a frequent source of bugs.
 
-## dplyr
+### *dplyr* library
 
 We have already seen the filter command, the *dplyr* version of subset. Here are the most important *dplyr* commands: 
 
@@ -124,7 +137,7 @@ We have already seen the filter command, the *dplyr* version of subset. Here are
 -  group_by 	allows for group operations in the  “split-apply-combine” concept (base R command: none)
 
 
-### Example: babynames
+#### **Example**: babynames
 
 The library *babynames* (also by Hadley Wickham) has the number of children of each sex given each name for each year from 1880 to 2015 according to the US census. All names with more than 5 uses are given.
 
@@ -141,7 +154,7 @@ library(babynames)
 babynames %>%
     filter(name %>% substr(1, 1) %>% equals("W")) %>%
     group_by(year, sex) %>%
-    summarize(total = sum(n)) %>%
+    summarise(total = sum(n)) %>%
     ggplot(data = ., aes(year, total, color = sex)) +
       geom_line() + 
       labs(color="Gender") +
@@ -158,6 +171,8 @@ babynames %>%
 ```
 
 Looks like my name is getting more popular (even if it is still rare)!
+
+
 
 What were the most popular girls names each year?
 
@@ -176,7 +191,7 @@ babynames %>%              # take babynames
 
 Let's say we want to save a data set made with the pipe. Logically we should be able to do this
 
-```{r error=T}
+```{r error=TRUE}
 babynames %>%              # take babynames
   filter(name=="Wolfgang") %>%   # then pick me
   wolfgangs                # then give new data set a name
@@ -184,7 +199,7 @@ babynames %>%              # take babynames
 
 but that results in an error, only functions can be used in a pipe. So it is done like this:
  
-```{r error=T}
+```{r}
 wolfgangs <- babynames %>%              # take babynames
   filter(name=="Wolfgang")    # then pick me
 print(wolfgangs, n=3)
@@ -193,7 +208,7 @@ print(wolfgangs, n=3)
 This unfortunately breaks the logic of piping. There is a better way, though. Just remember the logic of the assignment character <-, it's an arrow!
 
 
-```{r error=T}
+```{r}
 babynames %>%              # take babynames
   filter(name=="Wolfgang") ->   # then pick me
   wolfgangs               # then assign it a name
@@ -222,7 +237,7 @@ students1 %>%
 
 `r hl()$hr()`
 
-Let's say we want to find the times out of 100000 that the most popular names occured in the 2015:
+Let's say we want to find the times out of 100000 that the most popular names occurred in the 2015:
 
 ```{r}
 babynames %>%
@@ -235,7 +250,7 @@ babynames %>%
 
 so the *mutate* command let's us calculate new variables and the *arrange* command let's us change the order of the rows.
 
-## The tidyverse
+### The tidyverse
 
 *ggplot2* and *dplyr* are two of a number of packages that together form the *tidyverse*. They are centered around what is called *tidy data*. For a detailed discussion go to [https://www.tidyverse.org/](https://www.tidyverse.org/).
 
