--- a/bayes.Rmd
+++ b/bayes.Rmd
@@ -1,29 +1,22 @@
 ---
-title: Bayesian Analysis
 header-includes: \usepackage{color}
+                 \usepackage{float}
 output:
   html_document: default
   pdf_document:
     fig_caption: no
 ---
-<style>
-table, th, td { text-align:right; }
-th, td {padding: 10px;}
-</style>
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
-library(knitr)
-opts_chunk$set(fig.width=6, fig.align = "center", 
-      out.width = "70%", warning=FALSE, message=FALSE)
-library(ggplot2)
-library(grid)
+source("../R/setup.rmd.R", local=TRUE)
+setup.rmd(local.env=environment())
 ```
 `r hl()$basefontsize()`
+`r hl()$style()`
 
+## Bayesian Statistics
 
-# Prior and Posterior Distribution
+### Prior and Posterior Distribution
 
 Say we have a sample $\textbf{X}=(X_1,..,X_n)$, iid from some probability density $f(.| \theta)$, and we want to do some inference on the parameter $\theta$.
 
@@ -39,7 +32,7 @@ $$
 m(\textbf{x}) = \int ..\int f(\textbf{x}|\theta)\pi(\theta) d \theta
 $$
 
-### Example: Normal mean, normal prior
+#### **Example**: Normal mean, normal prior
 
 $X \sim N(\mu, \sigma)$ independent, $\sigma$ known, $\mu \sim N(a, b)$. 
 
@@ -113,7 +106,7 @@ hist(z, 50, freq=FALSE)
 curve(dnorm(x,d, cc), -3, 2, add=TRUE)
 ```
 
-### Example: Binomial proportion, Uniform prior
+#### **Example**: Binomial proportion, Uniform prior
 
 $X \sim Bin(n, p)$, $p \sim U[0,1]$
 
@@ -152,11 +145,11 @@ hist(z, 50, freq=FALSE)
 curve(dbeta(x, x0+1, n-x0+1), -2, 2, add=T)
 ```
 
-## Inference
+### Inference
 
 In a Bayesian analysis any inference is done from the posterior distribution. For example, point estimates can be found as the mean, median, mode or any other measure of central tendency:
 
-### Example: Normal mean, normal prior
+#### **Example**: Normal mean, normal prior
 
 say the following is a sample $X_1,..,X_n$ from a normal with standard deviation $\sigma=2.3$:
 
@@ -196,7 +189,7 @@ round(mean(dta.norm), 2)
 round(mean(dta.norm)+c(-1, 1)*qt(0.975, 12)*2.3/sqrt(20), 2)
 ```
 
-### Example: Binomial proportion, uniform prior
+#### **Example**: Binomial proportion, uniform prior
 
 Say in a class with 134 students 31 received an A. Find a 90% credible interval for the true percentage of students who get an A in this class.
 
@@ -204,9 +197,8 @@ Say in a class with 134 students 31 received an A. Find a 90% credible interval 
 round(qbeta(c(0.05, 0.95), 31 + 1, 134 - 31 + 1)*100, 1)
 ```
 
-<hr>
 
-### Example: Normal mean, Gamma prior
+#### **Example**: Normal mean, Gamma prior
 
 let's say that $\mu$ is a physical quantity, like the mean amount of money paid on sales. In that case it makes more sense to use a prior that forces $\mu$ to be non-negative. For example we could use $\mu \sim \text{Gamma}(\alpha, \beta)$. However, now we need to find
 
@@ -319,7 +311,7 @@ bayes.credint <- function(x, df, prior, conf.level=0.95, acc=0.001,
 }
 ```
 
-### Example: Normal mean, normal prior 
+#### **Example**: Normal mean, normal prior 
 
 ```{r}
 df <- function(x, par) dnorm(x, par, 2.3/sqrt(20))
@@ -328,7 +320,7 @@ round(bayes.credint(mean(dta.norm), df=df, prior=prior,
       lower=3, upper=8, Show=T), 2)
 ```
 
-### Example Binomial proportion, uniform prior
+#### **Example**: Binomial proportion, uniform prior
 
 ```{r}
 df <- function(x, par) dbinom(x, 134, par)
@@ -344,7 +336,7 @@ round(qbeta(c(0.05, 0.95), 31 + 1, 134 - 31 + 1)*100, 1)
 ```
 
 
-### Example: Normal mean, Gamma prior 
+#### **Example**: Normal mean, Gamma prior 
 
 ```{r}
 df <- function(x, par) dnorm(x, par, 2.3/sqrt(20))
@@ -353,11 +345,11 @@ round(bayes.credint(mean(dta.norm), df=df, prior=prior,
       lower=4, upper=7, Show=TRUE), 2)
 ```
 
-### Example: Binomial proportion, Lincoln's hat prior
+#### **Example**: Binomial proportion, Lincoln's hat prior
 
 Say we pick a coin from our pocket. We flip it 1000 time and get 578 heads. We want to find a 95% credible interval for the proportion of heads. 
 
-What would be good prior here? We might reason as follows: on the one had we are quite sure that indead it is an "almost" fair coin. On the other hand if it is not a fair coin we really don't know how unfair it might be. We can encode this in the *Lincoln's hat* prior:
+What would be good prior here? We might reason as follows: on the one had we are quite sure that indeed it is an "almost" fair coin. On the other hand if it is not a fair coin we really don't know how unfair it might be. We can encode this in the *Lincoln's hat* prior:
 
 ```{r}
 prior <- function(x) dunif(x) + dunif(x, 0.45, 0.55)
@@ -373,7 +365,7 @@ round(bayes.credint(x=578, df=df, prior=prior, acc=0.0001,
 
 So, have we just solved the Bayesian estimation problem for one parameter? 
 
-### Example: Beta density, Gamma prior
+#### **Example**: Beta density, Gamma prior
 
 consider the following sample:
 
@@ -405,9 +397,9 @@ Why does this not work? The problem is that the values is $\prod_{i=1}^n \text{d
 
 Occasionally one can avoid this problem by immediately choosing a *statistic* T(x), aka a function of the data, so that T(X) has a distribution that avoids the product. That of course is just what we did above by going to $\bar X$ in the case of the normal! In fact, it is also what we did in the case of the Binomial, because we replace the actual data (a sequence of Bernoulli trials) with their sum. 
 
+`r hl()$hr()`
 
-<hr>
-Can we generalize this to more than one parameter? In principle yes, but in practise no, at least not if the number of parameters is much more than 3 or 4. The main problem is the calculation of the marginal $m(x)$, because numerical integration in higher-dimensional spaces is very difficult. In that case a completley different approach is used, namely sampling from the posterior distribution using so called MCMC (Markov Chain Monte Carlo) algorithms.
+Can we generalize this to more than one parameter? In principle yes, but in practice no, at least not if the number of parameters is much more than 3 or 4. The main problem is the calculation of the marginal $m(x)$, because numerical integration in higher-dimensional spaces is very difficult. In that case a completely different approach is used, namely sampling from the posterior distribution using so called MCMC (Markov Chain Monte Carlo) algorithms.
 
 ```{r}
 df <- function(x, par) dpois(sum(x), 10*par)
