--- a/bootstrap.Rmd
+++ b/bootstrap.Rmd
@@ -1,5 +1,6 @@
 ---
 title: The Bootstrap
+                 \usepackage{float}
 header-includes: \usepackage{color}
 output:
   html_document: default
@@ -25,14 +26,14 @@ library(grid)
 
 The idea of the Bootstrap is rather strange: say we have some data from some distribution and we want to use it to estimate some parameter $\theta$. We have a formula (a *statistic*) $T(x_1, .. , x_n)$. What is the standard error in this estimate? That is, what is $sd[T(X_1, .. , X_n)]$?
 
-Sometimes we can do this mathematically: Let's assume that the $X_i$ are *iid* (independent and identically distributed) and we are interested in the mean. Let's write ${\bf X}=(X_1, .. , X_n)$, then
+Sometimes we can do this mathematically: Let's assume that the $X_i$ are *iid* (independent and identically distributed) and we are interested in the mean. Let's write ${\boldsymbol X}=(X_1, .. , X_n)$, then
 
 $$
 \begin{aligned}
 &\theta    = E[X]\\
-&T{\bf X}    = \frac1{n} \sum_{i=1}^n x_i\\
-&E[T{\bf X}] = E[\frac1{n} \sum_{i=1}^n X_i] = \frac1{n} \sum_{i=1}^n E[X_i] = \frac1{n} n \theta = \theta \\
-&Var[T{\bf X})]  = E \left[ \left( \frac1{n}\sum_{i=1}^n X_i - \theta \right)^2  \right] = \\
+&T{\boldsymbol X}    = \frac1{n} \sum_{i=1}^n x_i\\
+&E[T{\boldsymbol X}] = E[\frac1{n} \sum_{i=1}^n X_i] = \frac1{n} \sum_{i=1}^n E[X_i] = \frac1{n} n \theta = \theta \\
+&Var[T{\boldsymbol X})]  = E \left[ \left( \frac1{n}\sum_{i=1}^n X_i - \theta \right)^2  \right] = \\
 &\frac1{n^2} E \left[ \left( \sum_{i=1}^n X_i - n\theta \right)^2  \right] = \\
 &\frac1{n^2} E \left[  \left(  \sum_{i=1}^n (X_i - \theta) \right)^2  \right] = \\
 &\frac1{n^2} E \left[ \sum_{i,j=1}^n \left(  X_i - \theta \right)\left(  X_j - \theta \right)  \right] = \\
