--- a/classification.Rmd
+++ b/classification.Rmd
@@ -1,5 +1,6 @@
 ---
 title: Classification
+                 \usepackage{float}
 header-includes: \usepackage{color}
 output:
   html_document: default
