--- a/datatypes.Rmd
+++ b/datatypes.Rmd
@@ -1,28 +1,22 @@
 ---
-title: Data Types
 header-includes: \usepackage{color}
+                 \usepackage{float}
 output:
-  html_document: default
   pdf_document:
     fig_caption: no
+  html_document: default
 ---
 
-<style>
-table, th, td { text-align:right; }
-th, td {padding: 10px;}
-</style>
-
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
-library(knitr)
-opts_chunk$set(fig.width=6, fig.align = "center", 
-      out.width = "70%", warning=FALSE, message=FALSE)
-library(ggplot2)
-library(grid)
+source("../R/setup.rmd.R", local=TRUE)
+setup.rmd(local.env=environment())
 ```
 `r hl()$basefontsize()`
+`r hl()$style()`
 
+# Base R
+
+## Data Types
 
 Everything in R is an object. All objects have two intrinsic attributes: mode and length. The mode is the basic type of the elements of the object. There are four main modes:
 
@@ -153,7 +147,7 @@ x <- c(F, F, T)
 x
 ```
 
-but I recommend writting FALSE and TRUE because sometimes F and T are used for other things (F=Female)
+but I recommend writing FALSE and TRUE because sometimes F and T are used for other things (F=Female)
 
 the symbol R uses for missing values is NA (not available). Again, no quotes:
 
@@ -182,7 +176,7 @@ Sys.Date()
 ```
 
 
-## Type Conversion
+### Type Conversion
 
 Consider the following:
 
@@ -252,7 +246,7 @@ c(1L, FALSE)
 ```
 
 
-## Dates:
+### Dates
 
 The default format is yyyy-mm-dd:
 
@@ -263,7 +257,7 @@ mydates[2]-mydates[1]
 ```
 
 
-## Factor
+### Factor
 
 a very common data type in Statistics is a factor. These are vectors with a fixed number of different values (called  levels) and possibly an ordering.
 
