--- a/dates.Rmd
+++ b/dates.Rmd
@@ -1,25 +1,20 @@
 ---
-title: Dates with lubridate
 header-includes: \usepackage{color}
+                 \usepackage{float}
 output:
-  html_document: default
   pdf_document:
     fig_caption: no
+  html_document: default
 ---
 
-<style>
-table, th, td { text-align:right; }
-th, td {padding: 10px;}
-</style>
-
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
-library(knitr)
-opts_chunk$set(fig.width=6, fig.align = "center", 
-      out.width = "70%", warning=FALSE, message=FALSE)
+source("../R/setup.rmd.R", local=TRUE)
+setup.rmd(local.env=environment())
 ```
 `r hl()$basefontsize()`
+`r hl()$style()`
+
+## Dates with *lubridate*
 
 
 ```{r}
@@ -29,13 +24,15 @@ library(lubridate)
 
 For a more detailed discussion see [Dates and Times Made Easy with lubridate](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=6&ved=0ahUKEwjbm6-wvd_aAhUFneAKHRucD6cQFghjMAU&url=https%3A%2F%2Fwww.jstatsoft.org%2Farticle%2Fview%2Fv040i03%2Fv40i03.pdf&usg=AOvVaw1oHgFlV3bI-jAlcLyrugha).
 
+### Time and date basics
+
 At first glance working with dates and times doesn't seem so complicated, but consider the following questions:
 
 -  Where all of these years leap years: 1800, 1900, 2000?  
 -  Does every day have 24 hours?  
 -  Does every minute have 60 seconds?
 
-The answer to all these questions is: N0
+The answer to all these questions is: NO
 
 -  in principle every year divisible by 4 is a leap year, except if it is also divisible by 100, but not if also divisible by 400! So 1800 and 1900 were not leap years. 2000 was.
 
@@ -53,7 +50,7 @@ Imagine you need to analyse some stock market data, starting from 1980 to today 
 
 ### Create a date object
 
-to get todays time and date:
+to get today's time and date:
 
 ```{r}
 today()
@@ -89,7 +86,15 @@ flights %>%
   print(n=4)
 ```
 
-Let's start by calculating the hour and minutes of the departure from the dep-time. For this we can use %/% for integer devision and %% for modulo:
+Let's start by calculating the hour and minutes of the departure from the dep_time. For this we can use %/% for integer division and %% for modulo:
+
+```{r}
+12.34 %% 2
+12.34 %/% 2
+2 * (12.34 %/% 2) + 12.34 %% 2
+```
+
+with this we find
 
 ```{r}
 flights %>% 
@@ -119,7 +124,7 @@ flights %>%
   print(n=4)
 ```
 
-## Time Spans
+### Time spans
 
 lubridate has a number of functions to do arithmetic with dates. For example, my age is
 
