--- a/generate.vectors.Rmd
+++ b/generate.vectors.Rmd
@@ -1,27 +1,23 @@
 ---
-title: Generating Vectors
 header-includes: \usepackage{color}
+                 \usepackage{float}
 output:
   html_document: default
   pdf_document:
     fig_caption: no
 ---
 
-<style>
-table, th, td { text-align:right; }
-th, td {padding: 10px;}
-</style>
-
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
-library(knitr)
-opts_chunk$set(fig.width=6, fig.align = "center", 
-      out.width = "70%", warning=FALSE, message=FALSE)
-library(ggplot2)
-library(grid)
+source("../R/setup.rmd.R", local=TRUE)
+setup.rmd(local.env=environment())
 ```
 `r hl()$basefontsize()`
+`r hl()$style()`
+`r hl()$basefontsize()`
+
+## Generating Objects
+
+### Vectors
 
 There are numerous ways to generate vectors which have some structure. Here are some useful commands:
 
@@ -110,7 +106,7 @@ there are a number of R routines who need the data in this format as arguments, 
 
 -  outer
 
-This calculates the outer product of two vectors. It creates a matrix of length(x) x length(y) where $z_{ij} = f(x_i, y_j)$ for some fnction $f$
+This calculates the outer product of two vectors. It creates a matrix of length(x) x length(y) where $z_{ij} = f(x_i, y_j)$ for some function $f$
 
 ```{r}
 x <- 1:3
@@ -130,7 +126,7 @@ If it is actual multiplication you want there is also a short hand:
 x %o% y
 ```
 
-Want to practise you multiplication?
+Want to practice your multiplication tables?
 
 ```{r}
 x <- 1:10
@@ -146,10 +142,19 @@ What (if anything) does this do?
 (1:3 %o% 1:3) %o% 1:2
 ```
 
+### Specialty Data
 
-#Expressions
+Some common objects are easy to create:
 
-up to now we discussed how to generate data objects. Soon we will be talking about how to write your own functions. There is however also a type of object somewhat in between, so called expressions.
+```{r}
+letters
+LETTERS
+```
+
+
+### Expressions
+
+up to now we discussed how to generate data objects. Soon we will be talking about how to write your own functions. There is however also a type of object somewhat in between, so called *expressions*.
 
 An expression is a series of characters which make sense for R. All valid commands are expressions. When a command is typed directly on the keyboard, it is then evaluated by R and executed if it is valid. In many circumstances, it is useful to construct an expression without evaluating it: this is what the function expression is made for. It is, of course, possible to evaluate the expression subsequently with eval().
 
@@ -180,6 +185,17 @@ eval(D(exp1, "y"))
 D(exp1, "z")
 eval(D(exp1, "z"))
 ```
+
+**Exercise**
+
+Use the D function to find $\frac{d^2}{dx^2} \frac{x^2}{1+x^3}|_{x=0}$
+
+```{r echo=FALSE, eval=FALSE}
+x <- 0
+sexp <- expression(x^2/(1+x^3))
+eval(D(D(sexp, "x"), "x"))
+```
+
 
 In general R's use as a symbolic language is very limited. There are of course many purpose built languages for this, such as Maple or Mathematica.
 
