--- a/index.Rmd
+++ b/index.Rmd
@@ -1,42 +1,34 @@
 ---
 title: ESMA 6835 Computing with R
 header-includes: \usepackage{color}
+                 \usepackage{float}
 output:
   html_document: default
   pdf_document:
     fig_caption: no
 ---
 
-<style>
-table, th, td { text-align:right; }
-th, td {padding: 10px;}
-</style>
-
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
-library(knitr)
-library(wolfr)
-opts_chunk$set(fig.width=6, fig.align = "center", 
-               out.width = "70%", warning=FALSE, message=FALSE)
-library(ggplot2)
-library(grid)
-library(stringr)
+source("../R/setup.rmd.R", local=TRUE)
+setup.rmd(local.env=environment())
 ```
 `r hl()$basefontsize()`
+`r hl()$style()`
 
-[Entire class as pdf (10MB)](Computing-with-R.pdf)  
-[Syllabus](syl.html)  
-[Assignments](assign.html)  
-[Resma3.RData](http://academic.uprm.edu/wrolke/Resma3/Resma3.RData?Ver 3.0) (Ver 3.0)
+# General Stuff
 
-# 1  Getting Started
+1.1&nbsp;  [Computing-with-R.pdf](Computing-with-R.pdf)  
+0.2&nbsp;  [Syllabus](syl.html)  
+0.3&nbsp;  [Assignments](assign.html)  
+0.4&nbsp;  [Resma3.RData](http://academic.uprm.edu/wrolke/Resma3/Resma3.RData?Ver 3.0) (Ver 3.0)
+
+# Getting Started
 
 1.1&nbsp;  [Installation and Updating](install.html)  
-1.2&nbsp;  [R Markdown, HTML and Latex](rmark.html)  
-1.2&nbsp;  [History, Basic Usage](general.stuff.html)  
+1.2&nbsp;  [R Markdown, HTML and Latex](rmarkdown.html)  
+1.3&nbsp;  [History, Basic Usage](general.stuff.html)  
 
-# 2  Base R
+# Base R
 
 2.1&nbsp; [Data Types](datatypes.html)  
 2.2&nbsp; [Vectors, Matrices, Data frames and Lists](dataformats.html)  
@@ -56,29 +48,26 @@ library(stringr)
 2.16 [Customizing R: .First, .Rprofile, Dropbox](customization.html)  
 2.17 [List of Important base R Commands](important.commands.html)
 
-# 3  Extending R, Packages
+# Extending R, Packages
 
 3.1&nbsp; [Graphics with ggplot2](ggplot2.html)  
 3.2&nbsp; [C++ with Rcpp](rcpp.html)  
 3.3&nbsp; [Parallel and gpu Computing](parallel.html)  
-3.4&nbsp; [Input/Output Revisited](io1.hmtl)  
+3.4&nbsp; [Input/Output Revisited](io1.html)  
 3.5&nbsp; [The pipe, dplyr, tibbles, tidyverse](pipe.html)  
-3.6&nbsp; [Characters with strngr](character1.html)  
-3.7&nbsp; [Dates with lubridate](dates.html)  
-3.8&nbsp; [Factors with forcats](forcats.html)  
-3.9&nbsp; [Iteration with purrr](purrr.html)  
-3.10  [Interactive Apps with shiny](shiny.html)  
-3.11  [Version Control and Collaboration with github](github.html)  
+3.6&nbsp; [Interactive Apps with shiny](shiny.html)  
+3.7&nbsp; [Characters with strngr](character1.html)  
+3.8&nbsp; [Dates with lubridate](dates.html)  
+3.9&nbsp; [Factors with forcats](forcats.html)  
+3.10 [Version Control and Collaboration with github](github.html)  
 
 
-# 4  Statistics with R
+# Statistics with R
 
-4.1  [Basic Statistics](basic.stats.html)  
-4.2  [Estimation](estimation.html)  
-4.3  [The Bootstrap](bootstrap.html)  
-4.4  [Curve Fitting / Regression](curve.fitting.html)  
-4.5  [Classification](classification.html)  
-4.6  [Bayesian Analysis](bayes.html)  
-4.7  ??
+4.1  [Basic statistics](basic.stats.html)  
+4.2  [Multiple predictors](multiple.predictors.html)  
+4.3  [Parameter estimation](estimation.html)  
+4.4  [Bayesian analysis](bayes.html)  
+
 
 
