--- a/model.notation.Rmd
+++ b/model.notation.Rmd
@@ -1,27 +1,20 @@
 ---
-title: Model Notation
 header-includes: \usepackage{color}
+                 \usepackage{float}
 output:
   html_document: default
   pdf_document:
     fig_caption: no
 ---
 
-<style>
-table, th, td { text-align:right; }
-th, td {padding: 10px;}
-</style>
-
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
-library(knitr)
-opts_chunk$set(fig.width=6, fig.align = "center", 
-      out.width = "70%", warning=FALSE, message=FALSE)
-library(ggplot2)
-library(grid)
+source("../R/setup.rmd.R", local=TRUE)
+setup.rmd(local.env=environment())
 ```
 `r hl()$basefontsize()`
+`r hl()$style()`
+
+## Model Notation
 
 A number of R routines (for example boxplot and lm) use the *model* notation *y~x*, which you should read as *y modeled as a function of x*. So for example if we want to find the least squares regression model of y on x we use
 
@@ -47,7 +40,7 @@ lm(y ~ x - 1)
 
 If there are two predictors you can 
 
--  fit an *addititive* model of the form
+-  fit an *additive* model of the form
 $$
 Y = \beta_0 + \beta_1 x + \beta_2 z + \epsilon
 $$
@@ -146,7 +139,7 @@ lm(y ~ x1 + x2 + x3 + x1*x3 +x2*x3)
 
 `r hl()$vspace()`
 
-if there are more than a few predictors it is usally easier to generate a matrix of predictors:
+if there are more than a few predictors it is usually easier to generate a matrix of predictors:
 
 ```{r eval=FALSE}
 X <- cbind(x1, x2, x3, x4)
@@ -154,7 +147,7 @@ lm(y ~ X)
 ```
 
 
-### Case Study
+#### **Case Study**: House Prices
 
 we have a list of prices and other information on houses in Albuquerque, New Mexico:
 
@@ -165,32 +158,39 @@ head(albuquerquehouseprice)
 -  additive model, all four predictors:
 
 ```{r}
-attach(albuquerquehouseprice)
-summary(lm(Price ~ Sqfeet + Feature + Corner + Tax))
+summary(lm(Price ~ Sqfeet + 
+             Feature + Corner + Tax,
+           data=albuquerquehouseprice))
 ```
 
 - additive model, Sqfeet and Features
 
 ```{r}
-summary(lm(Price ~ Sqfeet + Feature))
+summary(lm(Price ~ Sqfeet + Feature,
+           data=albuquerquehouseprice))
 ```
 
 - model with interaction, Sqfeet and Features
 
 ```{r}
-summary(lm(Price ~ Sqfeet * Feature))
+summary(lm(Price ~ Sqfeet * Feature,
+           data=albuquerquehouseprice))
 ```
 
 - model with pairwise interactions:
 
 ```{r}
-summary(lm(Price ~ (Sqfeet + Feature + Corner +  Tax)^2))
+summary(lm(Price ~ (Sqfeet + Feature +
+                      Corner +  Tax)^2,
+           data=albuquerquehouseprice))
 ```
 
 - model with all possible terms:
 
 ```{r}
-summary(lm(Price ~ (Sqfeet + Feature + Corner +  Tax)^4))
+summary(lm(Price ~ (Sqfeet + Feature +
+                      Corner +  Tax)^4,
+           data=albuquerquehouseprice))
 ```
 
 
