--- a/numerical.methods.Rmd
+++ b/numerical.methods.Rmd
@@ -1,31 +1,24 @@
 ---
-title: Numerical Methods
 header-includes: \usepackage{color}
+                 \usepackage{float}
 output:
   html_document: default
   pdf_document:
     fig_caption: no
 ---
 
-<style>
-table, th, td { text-align:right; }
-th, td {padding: 10px;}
-</style>
-
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
-library(knitr)
-opts_chunk$set(fig.width=6, fig.align = "center", 
-      out.width = "70%", warning=FALSE, message=FALSE)
-library(ggplot2)
-library(grid)
+source("../R/setup.rmd.R", local=TRUE)
+setup.rmd(local.env=environment())
 ```
 `r hl()$basefontsize()`
+`r hl()$style()`
+
+## Numerical Methods
 
 R has a number of routines useful for numerical analysis
 
-# Integration
+### Integration
 
 the basic function for numerical integration is *integrate*
 
@@ -127,7 +120,7 @@ but the function inside the brackets is the density of a bivariate normal random
 2*pi*sqrt(1-(1/2)^2)
 ```
 
-## Differentiation
+### Differentiation
 
 We saw before the D function for finding derivatives:
 
@@ -152,7 +145,9 @@ x <- 0.4; eval(f.double.prime)
 ```
 
 
-*Example* The Taylor polynomial of order k of a function f at a point x=a is defined by
+**Example** 
+
+The Taylor polynomial of order k of a function f at a point x=a is defined by
 
 $$
 T(x;a,k)=\sum_{i=0}^k \frac{d^i f}{dx^i}(a)(x-a)^i
@@ -229,11 +224,11 @@ plot(x[-c(1, 250)], y.2.prime, type="l",
 ```
 
 
-## Root Finding
+### Root Finding
 
 A very common problem is to have to solve an equation of the form $f(x)=a$. As a specific example we will consider $x\sin(x^2)=1$. Here are some ideas:
 
-### Direct Method (Grid Search)
+-  Direct Method (Grid Search)
 
 ```{r}
 f <- function(x) x*sin(x^2)
@@ -241,7 +236,7 @@ x <- seq(0, 1.2, length=500)
 y <- f(x)
 curve(f, 0, 1.2, lwd=2)
 abline(h=1)
-y0 <- x[abs(y-1)==min(abs(y-1))]
+y0 <- x[which.min(abs(y-1))]
 abline(v=y0)
 y0
 ```
@@ -254,7 +249,7 @@ x <- seq(0.5, 2, length=500)
 y <- f(x)
 curve(f, 0.5, 2, lwd=2)
 y.prime <- eval(D(expression(x*sin(x^2)), "x"))
-x0 <- x[abs(y.prime)==min(abs(y.prime))]
+x0 <- x[which.min(abs(y.prime))]
 abline(v=x0)
 c(x0, f(x0))
 ```
@@ -266,7 +261,7 @@ optimize(f, c(0.5, 2), maximum = TRUE)
 ```
 
 
-### uniroot
+-  *uniroot* command
 
 R has the function *uniroot* to find the roots of a univariate function:
 
@@ -275,7 +270,7 @@ f <- function(x) x*sin(x^2)-1
 uniroot(f, c(0, 1.2))$root
 ```
 
-### polyroot
+-  *polyroot* command
 
 In the case of a polynomial one can also use *polyroot*. Say we want to find the roots of
 
@@ -324,3 +319,56 @@ This works well as long as we can play a bit with the starting point but can be 
 
 An alternative is *optim*, which let's us define boundaries within which the optimum is to be found. It also has a choice of methods, and sometimes one will work where the others do not.
 
+**Example**
+
+A very important object is Statistics is the *log-likelihood function*. Say we have observations $x_1,..,x_n$ from some density $f(x;\theta)$, where theta is some parameter (vector). Then the log-likelihood function is defined by
+
+$$l(\theta) = \sum_{i=1}^n \log f(x_i;\theta)$$
+
+A standard way to estimate $\theta$ is using the method of *maximum likelihood*, which finds the maximum of the likelihood function.
+
+Say $X \sim \text{ Bernoulli}(\theta)$, then 
+
+$$
+\begin{aligned}
+&f(x;\theta)   = \theta^x(1-\theta)^{1-x}\\
+&\log f(x;\theta)   = x\log\theta+(1-x)\log(1-\theta) \\
+&l(\theta) = \sum_{i=1}^n  x\log\theta+(1-x)\log(1-\theta) \\
+\end{aligned}
+$$
+
+Here is an example of what this might look like:
+
+```{r}
+x <- sample(c(0, 1), size=50, 
+            replace=TRUE, prob = c(2, 1))
+ll <- function(theta, x) {
+  y <- length(theta)
+  for(i in seq_along(theta))
+    y[i] <- sum(x*log(theta[i]) +
+               (1-x)*log(1-theta[i]))
+  y
+}  
+theta <- seq(0, 1, 0.01)
+plot(theta, ll(theta, x=x), 
+     type="l", 
+     xlab=expression(theta),
+     ylab="log-likelihood")
+fn <- function(z) -ll(z, x=x)
+# needs function to minimize
+tmp <- optim(0.5, fn, lower=0.1, upper=0.9)
+unlist(tmp)
+abline(v=tmp$par)
+```
+
+Say $X \sim \text{ Normal}(\mu, \sigma)$, then
+
+```{r}
+x <- rnorm(50, 5, 2)
+ll <- function(theta, x) {
+  -sum(log(dnorm(x, theta[1], theta[2])))
+}  
+tmp <- optim(c(0, 1), ll, lower=c(-Inf, 0),
+             upper=c(Inf, Inf), x=x)
+tmp$par
+```
